--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Quasars</title>
+<title>Quasars Rock!</title>
 <body>
-<iframe src="https://scratch.mit.edu/projects/859947339/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</html>
+<iframe src="https://scratch.mit.edu/projects/859947339/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe
+></html>
