--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <html>
 <title>Quasars Rock!</title>
 <body>
-<iframe src="https://scratch.mit.edu/projects/859947339/embed" allowtransparency="true" width="850" height="750" frameborder="0" scrolling="no" allowfullscreen></iframe
-></html>
+  <center>
+
+  <embed> src="https://scratch.mit.edu/projects/859947339/embed" allowtransparency="true" width="850" height="750" frameborder="0" scrolling="no" allowfullscreen></embed>
+</center>
+</html>
