--- a/index.html
+++ b/index.html
@@ -2,8 +2,5 @@
 <html>
 <title>Quasars Rock!</title>
 <body>
-  <center>
-
-  <embed> src="https://scratch.mit.edu/projects/859947339/embed" allowtransparency="true" width="850" height="750" frameborder="0" scrolling="no" allowfullscreen></embed>
-</center>
+  <iframe src="https://scratch.mit.edu/projects/859947339/embed" allowtransparency="true" width="850" height="750" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </html>
